src/objects/BMCServiceDesk__Incident_Manifest__c.object
<CustomObject>
    <description>Stores data that is used to track progress of a incident for various status values.</description>
    <fields>
        <fullName>BMCServiceDesk__FKChange_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request</label>
        <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
        <relationshipLabel>Incident Manifests</relationshipLabel>
        <relationshipName>Incident_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKFuture_Tasks__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
        <relationshipLabel>Incident Manifests</relationshipLabel>
        <relationshipName>Incident_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKIncident__c</fullName>
        <label>Incident</label>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipLabel>Incident Manifests</relationshipLabel>
        <relationshipName>Incident_Manifests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKProcess_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Template</label>
        <referenceTo>BMCServiceDesk__SRM_ProcessTemplate__c</referenceTo>
        <relationshipLabel>Incident Manifests</relationshipLabel>
        <relationshipName>Incident_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Status</label>
        <referenceTo>BMCServiceDesk__Status__c</referenceTo>
        <relationshipLabel>Incident Manifests</relationshipLabel>
        <relationshipName>Incident_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>BMCServiceDesk__Task__c</referenceTo>
        <relationshipLabel>Incident Manifests</relationshipLabel>
        <relationshipName>Incident_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTemplate_Linking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKTemplate Linking</label>
        <referenceTo>BMCServiceDesk__SYSTemplateLink__c</referenceTo>
        <relationshipLabel>Incident Manifests</relationshipLabel>
        <relationshipName>Incident_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Template_Order__c</fullName>
        <formula>if(ISBLANK(BMCServiceDesk__FKTemplate_Linking__c), BMCServiceDesk__FKProcess_Template__r.BMCServiceDesk__orderNumber__c,BMCServiceDesk__FKTemplate_Linking__r.BMCServiceDesk__orderNumber__c)</formula>
        <label>Template Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Incident Manifest</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MAN-{0}</displayFormat>
        <label>Manifest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident Manifests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>